[gd_scene load_steps=8 format=3 uid="uid://bwxim7a03270n"]

[ext_resource type="Script" path="res://scripts/battle_menu.gd" id="1_quhk2"]
[ext_resource type="Script" path="res://scripts/UI/Menu/action_menu.gd" id="2_r3bt6"]
[ext_resource type="Script" path="res://scripts/UI/Menu/buttons_handler.gd" id="3_s47vh"]
[ext_resource type="Script" path="res://scripts/UI/Menu/target_selection_menu.gd" id="4_eyooa"]
[ext_resource type="Script" path="res://scripts/UI/Menu/magic_spells_menu.gd" id="5_b21hc"]
[ext_resource type="Script" path="res://scripts/UI/Menu/player_selection_menu.gd" id="5_jdmb0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p3q5r"]
bg_color = Color(0.141176, 0.301961, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="BattleMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_quhk2")

[node name="ActionSelection" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = -179.0
offset_right = 215.0
offset_bottom = -13.0
grow_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_p3q5r")
script = ExtResource("2_r3bt6")

[node name="Buttons" type="VBoxContainer" parent="ActionSelection"]
layout_mode = 0
offset_left = 18.0
offset_top = 11.0
offset_right = 171.0
offset_bottom = 156.0
script = ExtResource("3_s47vh")

[node name="TargetSelection" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 235.0
offset_top = -179.0
offset_right = 531.0
offset_bottom = -13.0
grow_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_p3q5r")
script = ExtResource("4_eyooa")

[node name="Buttons" type="VBoxContainer" parent="TargetSelection"]
layout_mode = 0
offset_left = 11.0
offset_top = 9.0
offset_right = 289.0
offset_bottom = 159.0
script = ExtResource("3_s47vh")

[node name="MagicSpellsMenu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 235.0
offset_top = -179.0
offset_right = 531.0
offset_bottom = -13.0
grow_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_p3q5r")
script = ExtResource("5_b21hc")

[node name="Label" type="Label" parent="MagicSpellsMenu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -11.5
offset_right = 81.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "MAGIC SPELLS MENU"

[node name="ScrollContainer" type="ScrollContainer" parent="MagicSpellsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 9.0
offset_right = -10.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 3

[node name="Buttons" type="VBoxContainer" parent="MagicSpellsMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_s47vh")

[node name="Level1" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons"]
layout_mode = 2

[node name="lvl" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level1"]
layout_mode = 2
text = "Lvl. 1"

[node name="mp" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level1"]
layout_mode = 2
text = "XX / XX"

[node name="HBoxContainer" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Level2" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons"]
layout_mode = 2

[node name="lvl" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level2"]
layout_mode = 2
text = "Lvl. 1"

[node name="mp" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level2"]
layout_mode = 2
text = "XX / XX"

[node name="HBoxContainer" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Level3" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons"]
layout_mode = 2

[node name="lvl" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level3"]
layout_mode = 2
text = "Lvl. 1"

[node name="mp" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level3"]
layout_mode = 2
text = "XX / XX"

[node name="HBoxContainer" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Level4" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons"]
layout_mode = 2

[node name="lvl" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level4"]
layout_mode = 2
text = "Lvl. 1"

[node name="mp" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level4"]
layout_mode = 2
text = "XX / XX"

[node name="HBoxContainer" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Level5" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons"]
layout_mode = 2

[node name="lvl" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level5"]
layout_mode = 2
text = "Lvl. 1"

[node name="mp" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level5"]
layout_mode = 2
text = "XX / XX"

[node name="HBoxContainer" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level5"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Level6" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons"]
layout_mode = 2

[node name="lvl" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level6"]
layout_mode = 2
text = "Lvl. 1"

[node name="mp" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level6"]
layout_mode = 2
text = "XX / XX"

[node name="HBoxContainer" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level6"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Level7" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons"]
layout_mode = 2

[node name="lvl" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level7"]
layout_mode = 2
text = "Lvl. 1"

[node name="mp" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level7"]
layout_mode = 2
text = "XX / XX"

[node name="HBoxContainer" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level7"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Level8" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons"]
layout_mode = 2

[node name="lvl" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level8"]
layout_mode = 2
text = "Lvl. 1"

[node name="mp" type="Label" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level8"]
layout_mode = 2
text = "XX / XX"

[node name="HBoxContainer" type="HBoxContainer" parent="MagicSpellsMenu/ScrollContainer/Buttons/Level8"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemsMenu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 235.0
offset_top = -179.0
offset_right = 531.0
offset_bottom = -13.0
grow_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_p3q5r")

[node name="Label" type="Label" parent="ItemsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -11.5
offset_right = 81.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "ITEMS MENU"

[node name="Buttons" type="VBoxContainer" parent="ItemsMenu"]
layout_mode = 0
offset_left = 11.0
offset_top = 9.0
offset_right = 289.0
offset_bottom = 159.0
script = ExtResource("3_s47vh")

[node name="PlayerCharacterInformations" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 550.0
offset_top = -179.0
offset_right = 1129.0
offset_bottom = -13.0
grow_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_p3q5r")
script = ExtResource("5_jdmb0")

[node name="Buttons" type="VBoxContainer" parent="PlayerCharacterInformations"]
layout_mode = 0
offset_left = 12.0
offset_top = 10.0
offset_right = 569.0
offset_bottom = 156.0
script = ExtResource("3_s47vh")

[connection signal="gui_input" from="ActionSelection" to="ActionSelection" method="_on_gui_input"]
